<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Spinner
        style="@android:style/Widget.Holo.Light.Spinner"
        android:spinnerMode="dialog"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_list"/>

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/genre_Btn"
        android:text="@string/pickGenre" />

    <Spinner
        style="@android:style/Widget.Holo.Light.Spinner"
        android:spinnerMode="dialog"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_list"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_btn"
        android:text="@string/pickBook"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_menu_btn"
        android:text="@string/mainMenu"/>

</LinearLayout>